# simplyfile

./: CMakeLists.txt
